fix bug logo on firefox

--- a/src/Layout.module.scss
+++ b/src/Layout.module.scss
@@ -1,11 +1,3 @@
-.logo {
-  height: -webkit-fill-available;
-}
-
-.filters {
-  width: inherit;
-}
-
 .filtersNb {
   font-size: 0.6rem;
 }
